xorg-libxkbfile: missing uninitializer for `struct _XkbRF_VarDefs`
Submitted by Sergey Mironov
Assigned to X.Org Security
Link to original bug (#110696)
Description
Hi. We use XkbRF_GetNamesProp
function to get layout properties. Unfortunately, it looks like the structure filled by the function needs special deinitializer, since you use malloc
to allocate string pointers. AFAIK no deinitializer is provided currently. Could you please provide one?